refactor: Padronização com a classe PatientController