@@ -2,69 +2,76 @@ package br.fai.lds.medlink.controller;
 
 import br.fai.lds.medlink.domain.Medic;
 import br.fai.lds.medlink.domain.dataTransferObject.Medic.MedicCreateDto;
+import br.fai.lds.medlink.domain.dataTransferObject.Medic.MedicUpdateDto;
 import br.fai.lds.medlink.domain.dataTransferObject.Medic.MedicResponseDto;
 import br.fai.lds.medlink.port.service.medic.MedicService;
 import jakarta.validation.Valid;
-import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@RequiredArgsConstructor
 @RestController
-@RequestMapping("/api/medic")
+@RequestMapping("/api/medics")
 public class MedicController {
 
     private final MedicService medicService;
 
-    //Retorna todos os médicos cadastrados.
+    public MedicController(MedicService medicService) {
+        this.medicService = medicService;
+    }
+
+    // Criar médico
+    @PostMapping
+    public ResponseEntity<MedicResponseDto> createMedic(@Valid @RequestBody MedicCreateDto dto) {
+        Medic medic = dto.toEntity();
+        int id = medicService.create(medic);
+        medic.setId(id);
+        return new ResponseEntity<>(MedicResponseDto.fromEntity(medic), HttpStatus.CREATED);
+    }
+
+    // Listar todos
     @GetMapping
     public ResponseEntity<List<MedicResponseDto>> getAllMedics() {
         List<Medic> medics = medicService.findAll();
-        List<MedicResponseDto> dtoList = medics
-                .stream()
+        List<MedicResponseDto> dtos = medics.stream()
                 .map(MedicResponseDto::fromEntity)
-                .toList();
-
-        return ResponseEntity.ok(dtoList);
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(dtos);
     }
 
-    //Retorna os dados de um médico pelo ID.
+    // Buscar por id
     @GetMapping("/{id}")
     public ResponseEntity<MedicResponseDto> getMedicById(@PathVariable int id) {
-        Medic entity = medicService.findById(id);
-
-        if (entity == null) {
+        Medic medic = medicService.findById(id);
+        if (medic == null) {
             return ResponseEntity.notFound().build();
         }
-
-        MedicResponseDto dto = MedicResponseDto.fromEntity(entity);
-        return ResponseEntity.ok(dto);
+        return ResponseEntity.ok(MedicResponseDto.fromEntity(medic));
     }
 
-    //Cria um novo médico
-    @PostMapping
-    public ResponseEntity<MedicResponseDto> createMedic(@Valid @RequestBody MedicCreateDto dto) {
-        Medic entity = dto.toEntity();
-        int id = medicService.create(entity);
-        entity.setId(id);
-
-        URI location = ServletUriComponentsBuilder
-                .fromCurrentRequestUri()
-                .path("/{id}")
-                .buildAndExpand(id)
-                .toUri();
-
-        return ResponseEntity.created(location).body(MedicResponseDto.fromEntity(entity));
+    // Atualizar médico
+    @PutMapping("/{id}")
+    public ResponseEntity<MedicResponseDto> updateMedic(@PathVariable int id,
+                                                        @Valid @RequestBody MedicUpdateDto dto) {
+        Medic medic = medicService.findById(id);
+        if (medic == null) {
+            return ResponseEntity.notFound().build();
+        }
+        dto.updateEntity(medic);
+        Medic updated = medicService.update(id, medic);
+        return ResponseEntity.ok(MedicResponseDto.fromEntity(updated));
     }
 
-    //Desativa um médico (soft delete) pelo ID.
-    @PutMapping("/{id}/remove")
-    public ResponseEntity<Void> deleteMedic(@PathVariable int id) {
+    // Inativar médico
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deactivateMedic(@PathVariable int id) {
         boolean success = medicService.delete(id);
-        return success ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
+        if (!success) {
+            return ResponseEntity.notFound().build();
+        }
+        return ResponseEntity.noContent().build();
     }
 }
